--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="xda_link">XDA link</string>
     <string name="source">Source code</string>
     <string name="github_link">https://github.com/Lawiusz/xposed_lockscreen_visualizer</string>
+    <string name="xposed_status">Xposed module status</string>
+    <string name="xposed_ok">Active</string>
+    <string name="xposed_err">Inactive</string>
 </resources>
