--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="thanks">Thanks to:</string>
     <string name="thanks_content">The CyanogenMod Project for their VisualizerView code,\nrovo89 for his awesome Xposed framework.</string>
     <string name="support">Support</string>
-    <string name="xda_link">XDA link</string>
+    <string name="xda_link">http://forum.xda-developers.com/devdb/project/?id=14740</string>
     <string name="source">Source code</string>
     <string name="github_link">https://github.com/Lawiusz/xposed_lockscreen_visualizer</string>
     <string name="xposed_status">Xposed module status</string>
     <string name="xposed_ok">Active</string>
     <string name="xposed_err">Inactive</string>
+    <string name="no_perms">Audio permissions are need to display visualizer!</string>
 </resources>
