Some settings don't require reboot anymore, Fixed settings being not respected on some devices, The "Prevent screen from dimming" feature now requires device to be plugged in (to prevent accidental battery drain while the device is in pocket), Minor fixes, improvements and cleanup, Fixed  copyright notice.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="antidimmer">Prevent screen from dimming</string>
     <string name="antidimmer_enabled">Lock screen won\'t dim while displaying visualizer</string>
     <string name="antidimmer_disabled">Lock screen will dim in accordance with system settings</string>
-    <string name="restart_needed">You may need to restart your device in order to see changes.</string>
+    <string name="restart_needed">You may need to restart SystemUI (or reboot) in order to see changes.</string>
     <string name="about">About</string>
     <string name="about_summary">See info about this module</string>
     <string name="author">Author</string>
