SystemUI restart doesn't need root anymore, Changed the way module's UI shares settings with Xposed part. You may need to open the module's UI at least once so that  all settings are reapplied. The "Prevent screen from dimming" feature can optionally work on battery, Minor fixes and cleanup, Updated  copyright notice.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="antidimmer">Prevent screen from dimming</string>
     <string name="antidimmer_enabled">Lock screen won\'t dim while displaying visualizer</string>
     <string name="antidimmer_disabled">Lock screen will dim in accordance with system settings</string>
+    <string name="antidimmer_batt">Prevent screen from dimming on battery</string>
+    <string name="antidimmer_batt_enabled">Lock screen won\'t dim even on battery</string>
+    <string name="antidimmer_batt_disabled">Lock screen won\'t dim only if device is connected to a power supply.</string>
     <string name="restart_needed">You may need to restart SystemUI (or reboot) in order to see changes.</string>
     <string name="about">About</string>
     <string name="about_summary">See info about this module</string>
